Fixing footer columns

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -70,12 +70,14 @@
           "type": "text",
           "id": "link_text",
           "label": "Link Text",
-          "default": "Link"
+          "default": "Link",
+          "info": "Text to display for this link"
         },
         {
           "type": "url",
           "id": "link_url",
-          "label": "Link URL"
+          "label": "Link URL",
+          "info": "URL where this link should point to"
         }
       ]
     }
