--- a/snippets/footer-content.liquid
+++ b/snippets/footer-content.liquid
@@ -233,34 +233,21 @@
           </h5>
         {% endif %}
         
-        {%- liquid
-          assign link_blocks_count = 0
-          if section.blocks != blank
-            for block in section.blocks
-              if block.type == 'link'
-                assign link_blocks_count = link_blocks_count | plus: 1
-              endif
-            endfor
-          endif
-        -%}
-        
-        {% if link_blocks_count > 0 %}
-          <div class="footer-links-list">
+        <div class="footer-links-list">
+          {% if section.blocks != blank and section.blocks.size > 0 %}
             {% for block in section.blocks %}
               {% if block.type == 'link' %}
                 {% assign link_text = block.settings.link_text | default: 'Link' %}
                 {% assign link_url = block.settings.link_url | default: '#' %}
-                {% if link_text != blank %}
-                  <a href="{{ link_url }}" 
-                     class="footer-link"
-                     style="color: {{ footer_link_color }}; font-size: {{ footer_link_font_size }}px; font-weight: {{ footer_link_font_weight }}; text-decoration: none; display: block; margin-bottom: {{ footer_link_spacing }}px;">
-                    {{ link_text | upcase }}
-                  </a>
-                {% endif %}
+                <a href="{{ link_url }}" 
+                   class="footer-link"
+                   style="color: {{ footer_link_color }}; font-size: {{ footer_link_font_size }}px; font-weight: {{ footer_link_font_weight }}; text-decoration: none; display: block; margin-bottom: {{ footer_link_spacing }}px;">
+                  {{ link_text | upcase }}
+                </a>
               {% endif %}
             {% endfor %}
-          </div>
-        {% endif %}
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
