--- a/snippets/footer-content.liquid
+++ b/snippets/footer-content.liquid
@@ -120,6 +120,18 @@
       endif
     endfor
   endif
+
+  comment
+    Count useful link blocks
+  endcomment
+  assign link_blocks_count = 0
+  if section.blocks != blank
+    for block in section.blocks
+      if block.type == 'link'
+        assign link_blocks_count = link_blocks_count | plus: 1
+      endif
+    endfor
+  endif
 -%}
 
 <footer class="custom-footer" style="background-color: {{ footer_bg_color }}; padding: {{ footer_vertical_padding }}px {{ footer_horizontal_padding }}px;">
@@ -233,21 +245,23 @@
           </h5>
         {% endif %}
         
-        <div class="footer-links-list">
-          {% if section.blocks != blank and section.blocks.size > 0 %}
-            {% for block in section.blocks %}
-              {% if block.type == 'link' %}
-                {% assign link_text = block.settings.link_text | default: 'Link' %}
-                {% assign link_url = block.settings.link_url | default: '#' %}
-                <a href="{{ link_url }}" 
-                   class="footer-link"
-                   style="color: {{ footer_link_color }}; font-size: {{ footer_link_font_size }}px; font-weight: {{ footer_link_font_weight }}; text-decoration: none; display: block; margin-bottom: {{ footer_link_spacing }}px;">
-                  {{ link_text | upcase }}
-                </a>
-              {% endif %}
-            {% endfor %}
-          {% endif %}
-        </div>
+        {% if link_blocks_count > 0 %}
+          <div class="footer-links-list">
+            {% if section.blocks != blank and section.blocks.size > 0 %}
+              {% for block in section.blocks %}
+                {% if block.type == 'link' %}
+                  {% assign link_text = block.settings.link_text | default: 'Link' %}
+                  {% assign link_url = block.settings.link_url | default: '#' %}
+                  <a href="{{ link_url }}" 
+                     class="footer-link"
+                     style="color: {{ footer_link_color }}; font-size: {{ footer_link_font_size }}px; font-weight: {{ footer_link_font_weight }}; text-decoration: none; display: block; margin-bottom: {{ footer_link_spacing }}px;">
+                    {{ link_text | upcase }}
+                  </a>
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+          </div>
+        {% endif %}
       </div>
     </div>
   </div>
