--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,6 +7,16 @@
   
   {{ content_for_header }}
   
+  {%- if settings.gtm_container_id != blank -%}
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','{{ settings.gtm_container_id }}');</script>
+  <!-- End Google Tag Manager -->
+  {%- endif -%}
+  
   <!-- Local fonts are bundled via assets/theme.css -->
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -446,6 +456,13 @@
   </style>
 </head>
 <body>
+  {%- if settings.gtm_container_id != blank -%}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ settings.gtm_container_id }}"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  {%- endif -%}
+  
   {% section 'header' %}
 
   <main role="main">
